# ChangeLog for app-text/texlive-source
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove libwww dep, not needed

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove ncurses dep, only needed for dialog

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove dep on media-libs/gd, only needed for dvipng

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  -files/2007/texlive-core-2007-use-system-libtool.patch,
  texlive-core-2007.ebuild:
  remove use system libtool hack, it is a bad idea to do that without running
  eautoreconf

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  cleanup old stuff, esp. xdvik that we really dont want here, it would cause
  circular deps with t1lib and use doc

  17 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove dep on t1lib, only needed for xdvi and dvipng which are external

  17 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  fix icu include dir

  08 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/2007/texlive-core-2007-icu-xetex-execstacks.patch,
  texlive-core-2007.ebuild:
  fix exec stacks on xetex

  07 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/2007/tetex-3.0_p1-xpdf-CVE-2007-3387.patch,
  texlive-core-2007.ebuild:
  import security fix from tetex

  05 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  add missing dep on fontconfig as reported by pchrist on freenode

  04 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  install dvipdfm from its own ebuild, install texmf-dist

  01 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  More verbose die messages, quote dir variables, patch by opfer
